feat(league): create and select season leagues
